[metadata]
name = plover_run_py
version = 0.0.4
author = user202729
description = Command plugin for Plover to run an arbitrary Python command.
long_description = file: README.md
long_description_content_type = text/markdown
license = GNU General Public License v3 or later (GPLv3+)
url = https://github.com/user202729/plover-run-py
classifiers =
    Environment :: Plugins
	License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Operating System :: OS Independent
    Programming Language :: Python :: 3
keywords = plover plover_plugin

[options]
zip_safe = True
install_requires =
    plover>=4.0.0.dev8
packages =
    plover_run_py

[options.entry_points]
plover.command =
    py = plover_run_py:py_command
    py_f = plover_run_py:py_command_file
